massege page done

--- a/buyer-home.html
+++ b/buyer-home.html
@@ -30,7 +30,7 @@
                                     <div class="text-[#A3A3A0] text-[0.625rem] font-[600] mb-[12px] tracking-[1.5px] uppercase">Menu</div>
                                     <ul class="flex flex-col gap-[12px] *:text-color11 *:font-[600] *:text-[0.8125rem] *:leading-[1.5] *:uppercase">
                                         <li><a href="buyer-home.html" class="font-[600] flex justify-between items-center traking-[1.5px]">Home</a></li>
-                                        <li><a href="buyer-listing.html" class="font-[600] flex justify-between items-center traking-[1.5px]">Messages <span class="bg-[#CD1313] text-[#fff] w-[20px] h-[20px] flex items-center justify-center rounded-full">29</span></a></li>
+                                        <li><a href="./message_chatiing.html" class="font-[600] flex justify-between items-center traking-[1.5px]">Messages <span class="bg-[#CD1313] text-[#fff] w-[20px] h-[20px] flex items-center justify-center rounded-full">29</span></a></li>
                                         <li><a href="all-notification.html" class="font-[600] flex justify-between items-center traking-[1.5px]">Notifications <span class="bg-[#CD1313] text-[#fff] w-[20px] h-[20px] flex items-center justify-center rounded-full">99</span></a></li>
                                         <li><a href="./buyer-profile-refarrel-history.html" class="font-[600] flex justify-between items-center traking-[1.5px]">My Profile</a></li>
                                     </ul>
