--- a/dashbord-home.html
+++ b/dashbord-home.html
@@ -153,7 +153,7 @@
                                 <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="./dashboard-recomenders.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <ellipse cx="11.7778" cy="18.1115" rx="7.77778" ry="3.88889" stroke="#0F172A" stroke-width="1.5" stroke-linejoin="round"/>
