--- a/dashboard-wallet-page.html
+++ b/dashboard-wallet-page.html
@@ -579,7 +579,7 @@
         </div>
     </div>
     <div class="seller_modal">
-        <div class="modal-overlay fixed inset-0 bg-[#00020b66] z-[10] hidden">
+        <!-- <div class="modal-overlay fixed inset-0 bg-[#00020b66] z-[10] hidden">
             <div class="modal-content flex min-h-full items-center justify-center">
                 <div class="bg-[#fff] p-[20px] rounded-[10px] max-w-[400px] dm-sans">
                     <div class="close_modal_btn text-end">
@@ -663,7 +663,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="modal-overlay fixed inset-0 bg-[#00020b66] z-[10] hidden">
             <div class="modal-content flex min-h-full items-center justify-center">
                 <div class="bg-[#fff] p-[20px] rounded-[10px] max-w-[545px] max-h-[500px] overflow-y-auto scrollbar-none border-y-[19px] border-[#2F4A69]">
