dashboard setting faq and payment

--- a/dashboard-wallet-page.html
+++ b/dashboard-wallet-page.html
@@ -268,7 +268,7 @@
                                     </div>
                                 </div>
                                 <div class="withdraw-btn mt-[26px]">
-                                    <a href="javascript:void(0)" class="text-center w-full p-[15px] bg-[#2F4A69] rounded-[8px] font-[1rem] leading-[1.5] text-[#fff] font-[700]">Withdraw Now</a>
+                                    <a href="javascript:void(0)" class="text-center w-full p-[15px] bg-[#2F4A69] rounded-[8px] text-[1rem] leading-[1.5] text-[#fff] font-[700]">Withdraw Now</a>
                                 </div>
                                 <div class="account-details mt-[50px]">
                                     <div class="header flex justify-between gap-[20px] items-center">
