dashbord add staff page

--- a/dashboard-storehub.html
+++ b/dashboard-storehub.html
@@ -226,7 +226,7 @@
                                     <p class="font-semibold text-[#5D6A83] text-[1rem] leading-[1.5] tracking-[0.2px] mt-1.5">Create eye-catching promotional banners and manage them effectively.</p>
                                 </div>
                                 <div class="btn_wraper">
-                                    <a href="javascript:void(0)" class="bg-[#1F3650] rounded-lg p-4 flex items-center gap-2 font-semibold text-[#ffffff] text-[1.125rem] "><i class="fa-solid fa-plus"></i> <span>Create Promotions</span></a>
+                                    <a href="./dashboard-promotional-tools.html" class="bg-[#1F3650] rounded-lg p-4 flex items-center gap-2 font-semibold text-[#ffffff] text-[1.125rem] "><i class="fa-solid fa-plus"></i> <span>Create Promotions</span></a>
                                 </div>
                             </div>
                             <div class="top-part p-[24px] flex gap-[16px] flex-wrap">
