--- a/dashbord-home.html
+++ b/dashbord-home.html
@@ -112,7 +112,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                            <a href="./dashboard-staff-manegement.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                                 <span>
                                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M19.9963 10.621V19C19.9963 19.5304 19.7856 20.0391 19.4105 20.4142C19.0355 20.7893 18.5268 21 17.9963 21H6.00433C5.47407 20.9997 4.96562 20.7889 4.59076 20.4139C4.21591 20.0388 4.00533 19.5303 4.00533 19V10.621M7.50233 8.75L8.00233 3M7.50233 8.75C7.50233 11.652 12.0003 11.652 12.0003 8.75M7.50233 8.75C7.50233 11.926 2.34733 11.27 3.06933 8.502L4.11433 4.495C4.22601 4.06703 4.47641 3.68815 4.82635 3.41765C5.17629 3.14714 5.60603 3.00026 6.04833 3H17.9523C18.3946 3.00026 18.8244 3.14714 19.1743 3.41765C19.5243 3.68815 19.7747 4.06703 19.8863 4.495L20.9313 8.502C21.6533 11.271 16.4983 11.926 16.4983 8.75M12.0003 8.75V3M12.0003 8.75C12.0003 11.652 16.4983 11.652 16.4983 8.75M16.4983 8.75L15.9983 3" stroke="#85A1C2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
