working on add staff page

--- a/buyer-payment-method.html
+++ b/buyer-payment-method.html
@@ -274,7 +274,7 @@
                     <h2 class="page_title dm-serif text-[2rem] leading-[1] tracking-[-0.4px] color-[#272833] mb-[48px] flex justify-between"><span>Payment Method</span> <span class="cursor-pointer md:hidden font-[500] text-[1rem]" id="buyer_profile_sidebar_menu_icon"><i class="fa-solid fa-bars"></i></span></h2>
                     <div class="payment_method_wraper_part flex flex-wrap gap-[24px]">
                         <label for="visa" class="flex-[1_1_220px] max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
-                            <a href="./buyer-my-card-details.html" class="flex gap-[16px] items-center">
+                            <a href="./buyer-new-payment-method.html" class="flex gap-[16px] items-center">
                                 <div class="image">
                                     <img src="./assets/images/visa1.png" alt="">
                                 </div>
@@ -286,7 +286,7 @@
                             <input type="radio" name="payment_method" id="visa" class="custom-checkbox style-two">
                         </label>
                         <label for="mastercard" class="flex-[1_1_220px] max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
-                            <a href="./buyer-my-card-details.html" class="flex gap-[16px] items-center">
+                            <a href="./buyer-new-payment-method.html" class="flex gap-[16px] items-center">
                                 <div class="image">
                                     <img src="./assets/images/mastercard.png" alt="">
                                 </div>
