--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -28,7 +28,7 @@
                     </div>
                     <ul class="menu flex flex-col gap-[24px] mt-[20px]">
                             <li class="group">
-                                <a href="./dashbord-home.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="dashbord-home.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M16 22V18C16 15.7909 14.2091 14 12 14C9.79086 14 8 15.7909 8 18V22M21 10.1503V17.9668C21 20.1943 19.2091 22 17 22H7C4.79086 22 3 20.1943 3 17.9668V10.1503C3 8.93937 3.53964 7.7925 4.46986 7.02652L9.46986 2.90935C10.9423 1.69689 13.0577 1.69688 14.5301 2.90935L19.5301 7.02652C20.4604 7.7925 21 8.93937 21 10.1503Z" stroke="#0F172A" stroke-width="1.5"/>
@@ -38,7 +38,7 @@
                                 </a>
                             </li>
                             <li class="group relative">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="./dashboard-wallet-page.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M2 7C2 4.79086 3.79086 3 6 3H18C20.2091 3 22 4.79086 22 7V17C22 19.2091 20.2091 21 18 21H6C3.79086 21 2 19.2091 2 17V7Z" stroke="#0F172A" stroke-width="1.5" stroke-linejoin="round"/>
@@ -50,7 +50,7 @@
                                 <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="dashboard-order-page.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
@@ -61,7 +61,7 @@
                                     <span>Orders</span>
                                 </a>
                             </li>
-                            <li class="group  active">
+                            <li class="group active">
                                 <a href="./dashboard-product-page.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -74,7 +74,7 @@
                                 </a>
                             </li>
                             <li class="dasboard-store-hub relative group flex items-center justify-between flex-wrap">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="javascript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3 10.9883V15.4943C3 18.3253 3 19.7413 3.879 20.6213C4.757 21.5013 6.172 21.5013 9 21.5013H15C17.828 21.5013 19.243 21.5013 20.121 20.6213C20.999 19.7413 21 18.3253 21 15.4933V10.9883" stroke="#1F3650" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -88,8 +88,8 @@
                                 </a>
                                 <div class="dasboard-store-hub-sub-menu hidden">
                                     <ul class="flex flex-col gap-[24px] pt-[24px] w-[100%]"> 
-                                        <li>
-                                            <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                        <li class="active">
+                                            <a href="./dashboard-storehub.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                                 <span>
                                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M9.78078 3.89075C10.3448 3.41075 10.6268 3.17075 10.9208 3.02975C11.2575 2.86873 11.626 2.78516 11.9993 2.78516C12.3725 2.78516 12.741 2.86873 13.0778 3.02975C13.3728 3.16975 13.6548 3.40975 14.2178 3.89075C14.4428 4.08275 14.5548 4.17775 14.6748 4.25775C14.9496 4.44193 15.2582 4.56973 15.5828 4.63375C15.7238 4.66175 15.8708 4.67375 16.1648 4.69775C16.9038 4.75575 17.2728 4.78575 17.5808 4.89475C17.9326 5.0189 18.2521 5.22021 18.516 5.48391C18.7799 5.74762 18.9814 6.06704 19.1058 6.41875C19.2148 6.72775 19.2438 7.09675 19.3028 7.83475C19.3258 8.12875 19.3378 8.27575 19.3658 8.41775C19.4298 8.74175 19.5578 9.05075 19.7418 9.32475C19.8218 9.44475 19.9178 9.55675 20.1088 9.78175C20.5888 10.3458 20.8298 10.6278 20.9708 10.9218C21.1318 11.2585 21.2154 11.627 21.2154 12.0003C21.2154 12.3735 21.1318 12.742 20.9708 13.0788C20.8308 13.3728 20.5898 13.6548 20.1088 14.2188C19.9776 14.3638 19.8551 14.5164 19.7418 14.6758C19.5577 14.9503 19.4299 15.2585 19.3658 15.5828C19.3378 15.7248 19.3258 15.8718 19.3028 16.1658C19.2438 16.9038 19.2148 17.2738 19.1058 17.5818C18.9814 17.9335 18.7799 18.2529 18.516 18.5166C18.2521 18.7803 17.9326 18.9816 17.5808 19.1058C17.2728 19.2158 16.9038 19.2448 16.1648 19.3028C15.8708 19.3268 15.7248 19.3388 15.5828 19.3668C15.2582 19.4308 14.9496 19.5586 14.6748 19.7428C14.5157 19.8561 14.3635 19.9786 14.2188 20.1098C13.6548 20.5898 13.3728 20.8298 13.0788 20.9708C12.742 21.1318 12.3735 21.2154 12.0003 21.2154C11.627 21.2154 11.2585 21.1318 10.9218 20.9708C10.6268 20.8308 10.3448 20.5908 9.78178 20.1098C9.63675 19.9786 9.48416 19.856 9.32478 19.7428C9.04997 19.5586 8.74134 19.4308 8.41678 19.3668C8.22419 19.3341 8.02986 19.3127 7.83478 19.3028C7.09578 19.2448 6.72678 19.2148 6.41878 19.1058C6.06698 18.9816 5.74743 18.7803 5.48355 18.5166C5.21967 18.2529 5.01816 17.9335 4.89378 17.5818C4.78478 17.2738 4.75578 16.9038 4.69678 16.1658C4.6872 15.9704 4.66616 15.7757 4.63378 15.5828C4.56963 15.2585 4.44183 14.9503 4.25778 14.6758C4.17778 14.5558 4.08178 14.4438 3.89078 14.2188C3.41078 13.6548 3.16978 13.3728 3.02878 13.0788C2.86776 12.742 2.78418 12.3735 2.78418 12.0003C2.78418 11.627 2.86776 11.2585 3.02878 10.9218C3.16978 10.6278 3.40978 10.3458 3.89078 9.78175C4.08178 9.55675 4.17778 9.44475 4.25778 9.32475C4.44183 9.05025 4.56963 8.74197 4.63378 8.41775C4.66178 8.27575 4.67378 8.12875 4.69678 7.83475C4.75578 7.09675 4.78478 6.72775 4.89378 6.41875C5.01826 6.06694 5.21993 5.74745 5.48399 5.48374C5.74805 5.22003 6.0678 5.01878 6.41978 4.89475C6.72778 4.78575 7.09678 4.75575 7.83578 4.69775C8.12978 4.67375 8.27578 4.66175 8.41778 4.63375C8.74234 4.56973 9.05097 4.44193 9.32578 4.25775C9.44578 4.17775 9.55678 4.08275 9.78078 3.89075Z" stroke="#85A1C2" stroke-width="1.5"/>
@@ -101,7 +101,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                            <a href="./dashboard-promotional-tools.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                                 <span>
                                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M14 22H10C6.229 22 4.343 22 3.172 20.828C2.001 19.656 2 17.771 2 14V12C2 8.229 2 6.343 3.172 5.172C4.344 4.001 6.229 4 10 4H14C17.771 4 19.657 4 20.828 5.172C21.999 6.344 22 8.229 22 12V14C22 17.771 22 19.657 20.828 20.828C20.175 21.482 19.3 21.771 18 21.898M7 4V2.5M17 4V2.5M21.5 9H10.75M2 9H5.875" stroke="#85A1C2" stroke-width="1.5" stroke-linecap="round"/>
@@ -112,7 +112,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                            <a href="./dashboard-staff-manegement.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                                 <span>
                                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M19.9963 10.621V19C19.9963 19.5304 19.7856 20.0391 19.4105 20.4142C19.0355 20.7893 18.5268 21 17.9963 21H6.00433C5.47407 20.9997 4.96562 20.7889 4.59076 20.4139C4.21591 20.0388 4.00533 19.5303 4.00533 19V10.621M7.50233 8.75L8.00233 3M7.50233 8.75C7.50233 11.652 12.0003 11.652 12.0003 8.75M7.50233 8.75C7.50233 11.926 2.34733 11.27 3.06933 8.502L4.11433 4.495C4.22601 4.06703 4.47641 3.68815 4.82635 3.41765C5.17629 3.14714 5.60603 3.00026 6.04833 3H17.9523C18.3946 3.00026 18.8244 3.14714 19.1743 3.41765C19.5243 3.68815 19.7747 4.06703 19.8863 4.495L20.9313 8.502C21.6533 11.271 16.4983 11.926 16.4983 8.75M12.0003 8.75V3M12.0003 8.75C12.0003 11.652 16.4983 11.652 16.4983 8.75M16.4983 8.75L15.9983 3" stroke="#85A1C2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -125,7 +125,7 @@
                                 </div>
                             </li>
                             <li class="relative group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="dashboard-inbox-page.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g  >
@@ -138,7 +138,7 @@
                                 <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="relative group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="./dashboard-all-notification.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
@@ -153,7 +153,7 @@
                                 <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="./dashboard-recomenders.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <ellipse cx="11.7778" cy="18.1115" rx="7.77778" ry="3.88889" stroke="#0F172A" stroke-width="1.5" stroke-linejoin="round"/>
@@ -170,7 +170,7 @@
                         </div>
                         <ul class="menu flex flex-col gap-[24px] mt-[20px]">
                             <li class="group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="./dashboard-settings.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M20.7155 15.134L20.0758 14.7423L20.7155 15.134ZM19.6548 16.866L20.2945 17.2577V17.2577L19.6548 16.866ZM1.28455 6.86602L0.644935 6.47436L0.644935 6.47436L1.28455 6.86602ZM2.34516 5.13397L2.98477 5.52563H2.98477L2.34516 5.13397ZM5.2428 4.40192L5.60138 3.74319L5.60138 3.74319L5.2428 4.40192ZM2.06097 9.59807L1.70238 10.2568H1.70238L2.06097 9.59807ZM16.7572 17.5981L16.3986 18.2568H16.3986L16.7572 17.5981ZM19.939 12.4019L19.5805 13.0606L19.939 12.4019ZM2.34515 16.866L1.70554 17.2577H1.70554L2.34515 16.866ZM1.28454 15.134L1.92415 14.7423L1.92415 14.7423L1.28454 15.134ZM19.6548 5.13398L20.2945 4.74232V4.74232L19.6548 5.13398ZM20.7155 6.86603L20.0758 7.25769V7.25769L20.7155 6.86603ZM19.939 9.59808L20.2976 10.2568H20.2976L19.939 9.59808ZM16.7572 4.40193L17.1158 5.06066V5.06066L16.7572 4.40193ZM2.06096 12.4019L2.41955 13.0607H2.41955L2.06096 12.4019ZM5.24279 17.5981L4.88422 16.9394L4.88421 16.9394L5.24279 17.5981ZM16.6445 4.46331L16.2859 3.80458V3.80458L16.6445 4.46331ZM5.35556 4.4633L4.99697 5.12202H4.99697L5.35556 4.4633ZM16.6445 17.5367L17.003 16.878L17.003 16.878L16.6445 17.5367ZM5.35556 17.5367L5.71413 18.1954L5.71414 18.1954L5.35556 17.5367ZM9.93939 1.75H12.0606V0.25H9.93939V1.75ZM12.0606 20.25H9.93939V21.75H12.0606V20.25ZM9.93939 20.25C9.1399 20.25 8.56817 19.6494 8.56817 19H7.06817C7.06817 20.5598 8.39585 21.75 9.93939 21.75V20.25ZM13.4318 19C13.4318 19.6494 12.8601 20.25 12.0606 20.25V21.75C13.6042 21.75 14.9318 20.5598 14.9318 19H13.4318ZM12.0606 1.75C12.8601 1.75 13.4318 2.35061 13.4318 3H14.9318C14.9318 1.44025 13.6041 0.25 12.0606 0.25V1.75ZM9.93939 0.25C8.39585 0.25 7.06817 1.44025 7.06817 3H8.56817C8.56817 2.35061 9.1399 1.75 9.93939 1.75V0.25ZM20.0758 14.7423L19.0152 16.4744L20.2945 17.2577L21.3551 15.5256L20.0758 14.7423ZM1.92416 7.25768L2.98477 5.52563L1.70554 4.74231L0.644935 6.47436L1.92416 7.25768ZM2.98477 5.52563C3.35198 4.92594 4.20337 4.69002 4.88421 5.06064L5.60138 3.74319C4.25309 3.00924 2.50985 3.42882 1.70554 4.74231L2.98477 5.52563ZM2.41955 8.93934C1.7621 8.58146 1.57418 7.82922 1.92416 7.25768L0.644935 6.47436C-0.176603 7.81599 0.330702 9.51011 1.70238 10.2568L2.41955 8.93934ZM19.0152 16.4744C18.648 17.074 17.7966 17.31 17.1158 16.9393L16.3986 18.2568C17.7469 18.9907 19.4902 18.5712 20.2945 17.2577L19.0152 16.4744ZM21.3551 15.5256C22.1766 14.184 21.6693 12.4899 20.2976 11.7432L19.5805 13.0606C20.2379 13.4185 20.4258 14.1708 20.0758 14.7423L21.3551 15.5256ZM2.98476 16.4744L1.92415 14.7423L0.644933 15.5256L1.70554 17.2577L2.98476 16.4744ZM19.0152 5.52564L20.0758 7.25769L21.3551 6.47437L20.2945 4.74232L19.0152 5.52564ZM20.0758 7.25769C20.4258 7.82923 20.2379 8.58147 19.5805 8.93936L20.2976 10.2568C21.6693 9.51012 22.1766 7.816 21.3551 6.47437L20.0758 7.25769ZM17.1158 5.06066C17.7966 4.69004 18.648 4.92596 19.0152 5.52564L20.2945 4.74232C19.4902 3.42884 17.7469 3.00926 16.3986 3.74321L17.1158 5.06066ZM1.92415 14.7423C1.57417 14.1708 1.7621 13.4185 2.41955 13.0607L1.70238 11.7432C0.3307 12.4899 -0.176605 14.184 0.644933 15.5256L1.92415 14.7423ZM1.70554 17.2577C2.50985 18.5712 4.25309 18.9908 5.60138 18.2568L4.88421 16.9394C4.20337 17.31 3.35198 17.0741 2.98476 16.4744L1.70554 17.2577ZM17.003 5.12203L17.1158 5.06066L16.3986 3.74321L16.2859 3.80458L17.003 5.12203ZM4.88421 5.06064L4.99697 5.12202L5.71414 3.80457L5.60138 3.74319L4.88421 5.06064ZM17.1158 16.9393L17.003 16.878L16.2859 18.1954L16.3986 18.2568L17.1158 16.9393ZM4.99698 16.878L4.88422 16.9394L5.60137 18.2568L5.71413 18.1954L4.99698 16.878ZM1.70238 10.2568C2.2912 10.5773 2.29121 11.4227 1.70238 11.7432L2.41955 13.0607C4.05215 12.1719 4.05215 9.82806 2.41955 8.93934L1.70238 10.2568ZM5.71414 18.1954C6.32456 17.8631 7.06817 18.305 7.06817 19H8.56817C8.56817 17.167 6.60692 16.0016 4.99697 16.878L5.71414 18.1954ZM14.9318 19C14.9318 18.305 15.6755 17.8631 16.2859 18.1954L17.003 16.878C15.3931 16.0016 13.4318 17.167 13.4318 19H14.9318ZM20.2976 11.7432C19.7088 11.4227 19.7088 10.5773 20.2976 10.2568L19.5805 8.93936C17.9479 9.82807 17.9479 12.1719 19.5805 13.0606L20.2976 11.7432ZM4.99697 5.12202C6.60692 5.99841 8.56817 4.83303 8.56817 3H7.06817C7.06817 3.695 6.32456 4.13686 5.71414 3.80457L4.99697 5.12202ZM16.2859 3.80458C15.6755 4.13687 14.9318 3.69501 14.9318 3H13.4318C13.4318 4.83303 15.3931 5.99842 17.003 5.12203L16.2859 3.80458ZM13.5833 11C13.5833 12.4267 12.4267 13.5833 11 13.5833V15.0833C13.2552 15.0833 15.0833 13.2552 15.0833 11H13.5833ZM11 13.5833C9.57327 13.5833 8.41668 12.4267 8.41668 11H6.91668C6.91668 13.2552 8.74485 15.0833 11 15.0833V13.5833ZM8.41668 11C8.41668 9.57327 9.57327 8.41667 11 8.41667V6.91667C8.74485 6.91667 6.91668 8.74484 6.91668 11H8.41668ZM11 8.41667C12.4267 8.41667 13.5833 9.57327 13.5833 11H15.0833C15.0833 8.74484 13.2552 6.91667 11 6.91667V8.41667Z" fill="#0F172A"/>
