--- a/dashboard-staff-manegement.html
+++ b/dashboard-staff-manegement.html
@@ -263,7 +263,7 @@
                   <div class="left_sidebar left_sidebar_manage_bookings bg-[#FEFEFE] px-[16px] py-[22px] rounded-[8px] xl:w-[352px] md:static absolute top-[80px] right-[-200%] md:shadow-none shadow-2xl transition-all duration-500 ease-in-out">
                       <ul class="manage_bookings_setting_menu_wraper">
                           <li class="group active">
-                              <a href="./staff-manegement.html" class="flex items-center gap-[10px] font-[400] text-color0 text-[1rem] leading-[1.5] p-4 rounded-[8px] bg-[#fff] border-b border-[#F2F6FF] group-[.active]:bg-[#F1F5F9] group-[.active]:font-bold">
+                              <a href="./dashboard-add-staff.html" class="flex items-center gap-[10px] font-[400] text-color0 text-[1rem] leading-[1.5] p-4 rounded-[8px] bg-[#fff] border-b border-[#F2F6FF] group-[.active]:bg-[#F1F5F9] group-[.active]:font-bold">
                                   <span class="icon w-[48px] h-[48px] flex items-center justify-center rounded-full bg-[#F1F5F9] group-[.active]:bg-[#1F3650] group-[.active]:text-[#fff]">
                                       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                           <ellipse cx="12" cy="17.5" rx="7" ry="3.5" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
