dashboard-add-staff.html page time-wraper div change

--- a/dashboard-add-staff.html
+++ b/dashboard-add-staff.html
@@ -375,11 +375,13 @@
                                     <div class="left_part flex flex-wrap items-center gap-4">
                                         <input type="checkbox" id="monday" name="monday" class="custom-checkbox square">
                                         <div class="date text-[1rem] text-[#1E293B] font-semibold w-[110px]">Monday</div>
-                                        <div class="time_wraper flex gap-2 items-center">
-                                            <input type="time" class="from_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="09:00 AM">
-                                            <div class="devider text-[#85A1C2] font-[600]">&mdash;</div>
-                                            <input type="time" class="to_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="10:00 AM">
-                                            <button class="delete_icon text-[#C10E0E]"><i class="fa-solid fa-trash"></i></button>
+                                        <div class="time_wraper flex flex-col gap-2 items-center">
+                                            <div class="time_inner flex gap-2 items-center">
+                                                <input type="time" class="from_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="09:00 AM">
+                                                <div class="devider text-[#85A1C2] font-[600]">&mdash;</div>
+                                                <input type="time" class="to_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="10:00 AM">
+                                                <button class="delete_icon text-[#C10E0E]"><i class="fa-solid fa-trash"></i></button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="icon_wraper right_part flex gap-5">
@@ -426,11 +428,13 @@
                                     <div class="left_part flex flex-wrap items-center gap-4">
                                         <input type="checkbox" id="monday" name="monday" class="custom-checkbox square">
                                         <div class="date text-[1rem] text-[#1E293B] font-semibold w-[110px]">Monday</div>
-                                        <div class="time_wraper flex gap-2 items-center">
-                                            <input type="time" class="from_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="09:00 AM">
-                                            <div class="devider text-[#85A1C2] font-[600]">&mdash;</div>
-                                            <input type="time" class="to_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="10:00 AM">
-                                            <button class="delete_icon text-[#C10E0E]"><i class="fa-solid fa-trash"></i></button>
+                                        <div class="time_wraper flex flex-col gap-2 items-center">
+                                            <div class="time_inner flex gap-2 items-center">
+                                                <input type="time" class="from_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="09:00 AM">
+                                                <div class="devider text-[#85A1C2] font-[600]">&mdash;</div>
+                                                <input type="time" class="to_time w-[clamp(100px,140px,141px)] text-center p-4 rounded-lg bg-[#F8FAFC] text-[1rem] text-[#191B23] font-semibold placeholder:text-[#191B23]" placeholder="10:00 AM">
+                                                <button class="delete_icon text-[#C10E0E]"><i class="fa-solid fa-trash"></i></button>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="icon_wraper right_part flex gap-5">
